# net-income-germany

./: Cargo.toml  README.md
.github/workflows/: build-and-tests.yaml
net_income_germany/: Cargo.toml  README.md
net_income_germany/src/: config.rs  income_tax.rs  lib.rs  social_security.rs
net_income_germany_cmd/: Cargo.toml  README.md
net_income_germany_cmd/src/: main.rs
net_income_germany_cmd/tests/: cli.rs
