[package]
name = "net-income-germany"
description = "Net income calculation for a given gross income based on the German social security and income tax rules."
categories = ["finance"]
keywords = ["income-tax", "tax", "germany"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Winterstein <adrian@winterstein.biz>"]
repository = "https://github.com/awinterstein/net-income-germany"
